Edit County maps.

--- a/contaePages/naContae2.html
+++ b/contaePages/naContae2.html
@@ -6,36 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-~~~~~~~~~~~~~~~~^MM*M^~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~.^.MMM*MMMM^~~~~~~~~~~~~
-~~~~~~~~.....^^^MMM***MMMM^~~~~~~~~~~
-~~~~~~.........^^^.^^**MMMMMM^^~~~~~~
-~~~~~~...........^^^.^*^MMMMMMM.....~
-~~~~~~..............^^*^^^^^^^^^^....
-~~~~~~...............**.^^^^^^^^^....
-~~~~~~..............**...............
-~~~~~~.............**................
-~~~................*...............~~
-~..................**..~~~~.......~~~
-...................**~~~~~~~~~~~~~~~~
-...................*.~~~~~~~~~~~~~~~~
-~..................*..~~~~~~~~~~~~~~~
-~~.................*..~~~~~~~~~~~~~~~
-~~.................*....~~~~~~~~~~~~~
-~~~................*......~~~~~~~~~~~
-~~~..............***.......~~~~~~~~~~
-~~~...........****..........~~~~~~~~~
-~~~~.....**..**..............~~~~~~~~
-~~~~......**.*...............~~~~~~~~
-~~~~.....^^***...............~~~~~~~~
-~~~~~....^^^^**..............~~~~~~~~
-~~~~~~....^^^^**.............~~~~~~~~
-~~~~~~~....^^^^*^............~~~~~~~~
-~~~~~~~~~~...rr*^^...........~~~~~~~~
-~~~~~~~~~~~~~~rrrrr.........~~~~~~~~~
-~~~~~~~~~~~~~~~~~~rrrrrrr~~~~~~~~~~~~
-
-
+xxxxxxxxxxxxxxxxxxxxxxxxxxxx.....^MM*M^^^^^^xxxxxxxxxxxxxxxxxxxxxx888
+xxxxxxxxxxxxxxxxx.xxxxxx.......^.MMM*MMMM^^^^^^888xxxxxxxxxxxxxxx8888
+xxxxxxxx..xxxxxxx....xx.......^^^MMM***MMMM^^^^^^88888888xxxxx8888888
+xxxxxxxx...xxxxxx...............^^^.^^**MMMMMM^^^^^^^8888888888888888
+xxxxxxxxx.........................^^^.^*^MMMMMMM........8888888888888
+xxxxxxxxxxx..........................^^*^^^^^^^^^^.........8888888888
+xxxxxxxxxxxxx.........................**.^^^^^^^^^............8888888
+xxxxxxxxxxxxxxxxx....................**........................888888
+xxxxxxxxx..xxxxxx...................**....88888.................88888
+xxxxxxxxx...xxx.....................*......8888888............8888888
+x..xxx..............................**....888888888888888888899888888
+xx..................................**....888898888889888888888888888
+xx..................................*.....888888888888888888888888888
+xxxxxxx.............................*.....888889889888788888888888888
+xxxxxxxxxx..........................*......88888888888888888888888888
+xxxxxxxxxxxxx......................*.......88888888878888888888888888
+xxxxxxxxxxxxxx......................*........888888878888888888888888
+xxxxxxxxxxxxxxx...................***..........8888898888888888888888
+xxxxxxxxxxxxxxx................****..............88888888888888888888
+xxxxxxxxxxxxxxxx..........**..**.....................8888888888888888
+xxxxxxxxxxxxxxxxx..........**.*.....................87888888888888888
+xxxxxxxxxxxxxxxxx.........^^***....................888888888888888888
+xxxxxxxxxxxxxxxxxxx.......^^^^**.....................8888888888888888
+xxxxxxxxxxxxxxxxxxxxxxx....^^^^**...................88888788888888888
+xxxxxxxxxxxxxxxxxxxxx.......^^^^*^.................888888888888888888
+xxxxxxxxxxxxxxxxxxxxx.........rr*^^................888878888888888888
+xxxxxxxxxxxxxxxxxxxxx..........rrrrr..............8888888888888888888
+xxxxxxxxxxxxxxxxxxx................rrrrrrrrrrrr8888888888788888888888
+xxxxxxxxxxxxxxxxxxx....xxx.............rrrxxxxx8888887888888888888888
+xxxxxxxxxxxxxxxxxxxxx.xxxxxxxx........xrrxxxxx88788888888888888888888
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx...xxxxxxxxxxx8888888888888888888888
     </div>
 
       <body>
