--- a/contaePages/naContae23.html
+++ b/contaePages/naContae23.html
@@ -6,37 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-
-    
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxrrrrrrrxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxrr.....rrrxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxrr.........xxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx..r.........xxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx...rrrrr..........xxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxxx...***.rr*...............xxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxx...**rrrr.***..............xxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxx...*rr..rr..*******...........xxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxx...rr....r..rrrrrr******...........xxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxrrrrr..*..rrr.....rrrr..****........xxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxx.......*...rr..^^^...rr....**.......xxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxx.......*....rrrr.^^^...r....**....xxxxxxxxx
-xxxxxxxxxx~~~....~~~~~~~~......*****........^...rr.....*...xxxxxxxxxx
-xxxxxxxxxx~.........~~.......***...***.....^^.rrr.....*....xxxxxxxxxx
-xxxxxxxxxx~.................**.......**.^^^^..r.....***...xxxxxxxxxxx
-xxxxxxxxxx~.................*......^^^*^^.....r....**....xxxxxxxxxxxx
-xxxxxxxxxx~...*...................^^^^**^.....r...**....xxxxxxxxxxxxx
-xxxxxxxxxx...**....................^^^^**^....rr.**....xxxxxxxxxxxxxx
-xxxxxxxxxx...*....................^^^^^^***^***rr.....xxxxxxxxxxxxxxx
-xxxxxxxxxx..*.....................^^^^^^^^***...rrrr..xxxxxxxxxxxxxxx
-xxxxxxxxxx..*......********......^^^^.^^^**^^......rrxxxxxxxxxxxxxxxx
-xxxxxxxxxx..**....**......***....^^^^^^^**.^^^^....xxxxxxxxxxxxxxxxxx
-xxxxxxxxxx~..*...**.........***.......***^^^^^^..xxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxx~...****...~~~~......**...***.^^^^^.xxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxx~~...*...~~~~~~~~......****^^^^.~~~~~~~~~~~~~~~~~~~~xxxxxxx
-xxxxxxxxxx~~......~~~~~~~~~~~........^.~~~~~~~~~~~~~~~~~~~~~~~xxxxxxx
-xxxxxxxxxx~~~...~~~~~~~~~~~~~~~.......~~~~~~~~~~~~~~~~~~~~~~~~xxxxxxx
-xxxxxxxxxx~~~~~~~~~~~~~~~~~~~~~~~~..~~~~~~~~~~~~~~~~~~~~~~~~~~xxxxxxx
-xxxxxxxxxx~~~~~~~~~~~~~~~~~~~~~~~~..~~~~~~~~~~~~~~~~~~~~~~~~~~xxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxrrxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxx.....rr......xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxx......rrrrrr....xxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxx...........rrrrrr...xxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxx.........rrrrrrr..........xxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxx...........rr...r..............xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxx.........r....rr................xxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxx.........rr.***.rr*..................xxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxx.........rr.**...rr***..................xxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxx......rrr..*....rr..*******...............xxxxxxxx
+xxxxxxxxxxxxxxxxxx.......r..........r..rrrrrr******..............xxxx
+xxxxxxxxxxxxxxxxx.......rr.......*..rrr.....rrrr..****.............xx
+xxxxxxxxxxxxxxxxx....rrrrr.......*...rr..^^^...rr....**...........xxx
+xxxxxxx......xxx.................*....rrrr.^^^...r....**.........xxxx
+x................~~~~~~~~......*****........^...rr.....*...........xx
+xx..................~~.......***...***.....^^.rrr.....*...........xxx
+xxx.........................**.......**.^^^^..r.....***..........xxxx
+xxx.......~.................*......^^^*^^.....r....**...........xxxxx
+xx........~...*...................^^^^**^.....r...**...........xxxxxx
+x............**....................^^^^**^....rr.**...........xxxxxxx
+x............*....................^^^^^^***^***rr...........xxxxxxxxx
+xx..........*.....................^^^^^^^^***...rrrr........xxxxxxxxx
+xxx.........*......********......^^^^.^^^**^^......rr.......xxxxxxxxx
+xxxxx.......**....**......***....^^^^^^^**.^^^^...........xxxxxxxxxxx
+xxxxxx.......*...**.........***.......***^^^^^^..........xxxxxxxxxxxx
+xxxxxxx.......****....~~~......**...***.^^^^^.......xxxxxxxxxxxxxxxxx
+xxxxxxxx.......*.....~~~~........****^^^^........xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxx...........~~~~~~~..........^........xxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxx........~~~~~~~~~~~...............xxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxx~......~~~~~~~~~~~~~~...........xxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxx~~....~~~~~~~~~~~~~~~~.......xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 
     </div>
