--- a/contaePages/naContae24.html
+++ b/contaePages/naContae24.html
@@ -7,36 +7,36 @@
     </head>
     <div id="mapdata">
 
-~~~~~~~~~~~~~~~~~~~.......~~~~
-~~~~~~~~~~~~~~~~...........~~~
-~~~~~~~~~~~~~~~...********..~~
-~~~~~~~~~~~~~~..**^^.....*...~
-~~~~~~~~~~~~..**^^^^.....*...~
-~~~~~~~~~~...*.^^^^^^....*....
-~~~~~~......*..^^^^^..r..**...
-..........**...^^^^..rrr.***..
-.......***.....^^....rrr.*.**.
-...****..............rr..*..*.
-.**..................rr..****.
-.*...................rr......~
-..*...................rr....~~
-..*............^^......rrr~~~~
-rrrrrrrr.......^^.........r~~~
-~~..*..rrr.....^^..........~~~
-~~~..*...rr....^^^......*...~~
-~~~~..*...r..^^^^^.....**...~~
-~~~~...*.....^^^^^^...**....~~
-~~~~~...^^....^^^^MM.**....~~~
-~~~~~...*^^.^^^^^MMM^*....~~~~
-~~~~~...*^^^^^^^MMM**..~~~~~~~
-~~~~~~...*^^^^MMMMM*..~~~~~~~~
-~~~~~~~..**^^MMMMM*..~~~~~~~~~
-~~~~~~~~~.*******...~~~~~~~~~~
-~~~~~~~~~~~~~.....~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~..~~~~~~~~~~~~
-
-
-
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxx.........~.........xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxx.....^.................xxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxx............********.....xxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxx.........^.**^^.....*.......xxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxx...........**^^^^.....*......xxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxx...............*.^^^^^^....*........xxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxx................*..^^^^^..r..**.......xxxxxxxxxxxxxx
+xxxxxxxxxxxxx.................**...^^^^..rrr.***......xxxxxxxxxxxxxx
+xxxxxxxxxxxxx..............***.....^^....rrr.*.**......xxxxxxxxxxxxx
+xxxxxxxxxxxxx..........****..............rr..*..*......xxxxxxxxxxxxx
+xxxxxxxxxxxxx........**........^...^.....rr..****......xxxxxxxxxxxxx
+xxxxxxxxxxxxx........*........^..^^......rr...........xxxxxxxxxxxxxx
+xxxxxxxxxxxrrrrrrrr...*......^..^.........rr.........xxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxx...rrr.*.....^.^^...^^......rrr.......xxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxx....rrrrrrrr.......^^.........r......xxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxx......**..rrr.....^^................xxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxx.....**^...rr....^^^......*.......xxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxx....^*^^...r..^^^^^.....**......xxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxx.....**^^.....^^^^^^...**......xxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxx....^**^^^....^^^^MM.**......xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxx.....^**^^^.^^^^^MMM^*......xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxx......*.*^^^^M^^MMM**......xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxx.......***^^^^M^MMM*......xxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxx........**^^MMMMM*......xxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxx.......*******.......xxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxx.......^....^.....xxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxx......^..^.....xxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxx....^.......xxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx...^...xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx...xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
     </div>
 
       <body>
