--- a/contaePages/naContae25.html
+++ b/contaePages/naContae25.html
@@ -6,33 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-~~~~~~~~~~~...~~~~~~~~~~~..~~
-~~~~~~~~.......rrrrrr......~~
-~~~~~~~............r...*....~
-~~~~~~.............r***.....~
-~~~~~~...........****rrrrrr.~
-~~~~~.........****..........~
-~~~.........***............~~
-~~.........**...*****....~~~~
-~.........**.****...*....~~~~
-..........*.........*....~~~~
-..........**........*....~~~~
-........****......***....~~~~
-~.......*..**.....*......~~~~
-~~......*...**...***.......~~
-~~~~....*....*.***.**......~~
-~~~~~~..*.....**....**.....~~
-~~~~~~..^^^^^^*......*....~~~
-~~~~~~~.^^^^^^***.****^^^.~~~
-~~~~~~~.^^^^^^^^***.**.^^^~~~
-~~~~~~~.^^^^^^^^**^^^**.^^^..
-~~~~~~~~..^^^^^^^*^MM^**^^^..
-~~~~~~~~~.^^^^^^^*MMMM^^.....
-~~~~~~~~~~.^^^^^**^^M^^^^^..~
-~~~~~~~~~~..^^^^^^^^^^..~~~~~
-~~~~~~~~~~~~...........~~~~~~
-
-
+xxxxxxxxxxxxxxxxxxx...........~~~~~~~~~~~......xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxx.............rrrrrr..........xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxx..................r...*.........xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxx...................r***...........xxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxx................****rrr..........xxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxx........***..****.....r..........xxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxx.......*.**..***........rr........xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxx........*..........*****...rrrr...xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxx........*........****...*......rrr.xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxx........**..............*.........xxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxx..........*.............*..........xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxx...........*^.**......***..........xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxx.........*.*..**.....*............xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxx.........*.^...**...***............xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxx.......*.*.^..*.***.**............xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxx........*.^...**....**...........xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxx...^..^^^^^^*......*....^.....xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxx......^.^.^^***.****^^^.......xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxx..^.^.^^^^^^^^***.**.^^^......xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxx.....^^.^^.^^**^^^**.^^^^.....xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxx...^^.^.^^^^^*^MM^**^^^.......xxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxx.....^^^^.^^*MMMM^^.........xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxx...^.^^^^^**^^M^^^^^.^....xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxx.....^.^^^^^^^^..^^^...xxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxx........^^^...^^.^^..xxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxx...........^^^...^..xxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxx.......^^..^.^....xxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxx.......^^.^^...xxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxx....^....^...xxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx........xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx..xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
     </div>
 
       <body>
