--- a/contaePages/naContae26.html
+++ b/contaePages/naContae26.html
@@ -6,36 +6,36 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-~~~~~~~~~~~~~~~~~~~~.............~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~..................~~~~~
-~~~~~~~~~~~~~~~~~~.......*******.......~~~
-~~~~~~~~~~~~~~~~~.......**......**.......~
-~~~~~~~~~~~~~~~~.......**........***......
-~~......~~~~r~~.**....**...........**.....
-~........~~~r~.***....*.............**....
-~.........rrr..*.*....*........~~....**...
-~........rr...*..*...*........~~~~........
-........rr..**...*...*.......~~~~~~......~
-.......rr..**...**..**.......~~~~~~.....~~
-.......r..*.....**.**.......~~~~~~~~.~~~~~
-.......r.**......***.......~~~~~~~~~~~~~~~
-~......r**.......**......*~~~~~~~~~~~~~~~~
-~~....rr*.........**....**.~~~~~~~~~~~~~~~
-~~~...r.*..........*..**....~~~~~~~~~~~~~~
-~~~~..rr*..........****.....~~~~~~~~~~~~~~
-~~~~~~.r**..................~~~~~~~~~~~~~~
-~~~~~~~.r*..................~~~~~~~~~~~~~~
-~~~~~~~~rr*.................~~~~~~~~~~~~~~
-~~~~~~~~~r**....^^^^..^...~~~~~~~~~~~~~~~~
-~~~~~~~~~~r**...^^^^^^^.~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~rr**..^^^^^^.~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~r.***.^^^^^.~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~rr..*.^^^^.~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~rr.**^^^..~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~r..*^^^..~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~rr.*^^^.~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~r.*^^.~~~~~~~~~~~~~~~~~~~~~~
-~~~~~~~~~~~~~~rr...~~~~~~~~~~~~~~~~~~~~~~~`;
+xxxxxxxxxx~~~~~~~~~~xxxxxxxx...........................xxxxxxxxxxxxx
+xxxxxxxxxxx~~~~~~~~~xxxxxxx...............................xxxxxxxxxx
+xxxxxxxxxxx~~~~~~~xxxxxxx................*******............xxxxxxxx
+xxxxxxxx~~~~~~~~xxxxxxx.................**......**...........xxxxxxx
+xxxxxxxx~~~~~......xx..................**........***............xxxx
+xxxxxxxxrr*.....................**....**...........**...........xxxx
+xxxxxxxxrr*....................***....*..........xxx**..........xxxx
+xxxxxxxrr.*....................*.*....*........xxxxxx**........xxxxx
+xxxxxxrr.*....................*..*...*........xxxxxxxx..........xxxx
+xxxxxxrr**.......................*...*.........xxxxxxxx........xxxxx
+xxxxxxrr*.......................**..**..........xxxxxxx.......xxxxxx
+xxxxxxrr*.......................**.**...........x.xxxxxx...x.xxxxxxx
+xxxxxxxrr*.......................***.............xxxxxxxx...xxxxxxxx
+xxxxxxxxrr*...........^..........**......*.....x.xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxrr*......................**....**......xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxrr*.....^................*..**.........xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxrr**...^...^............****.........xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxrr**.................................xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxrr**...^^...^.....^^...^^..........xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxrr***....^......^^..^...^..........xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxrrr***...^....^^.^^^^..^..^......xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxrrr***.....^^..^^^^^^^..^.....xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxrrr**..^...^.^^^^^^..^.....xxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxrr**....^...^^^^^.^.....xxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxrr**...^^..^^^^.^.....xxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxrr**....^^^^^.^.....xxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxrr**...^^^^^.^....xxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxrr*...^^^^^.....xxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxrr**..^^^^.^...xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxrr*....^^^...xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 
     </div>
