--- a/contaePages/naContae27.html
+++ b/contaePages/naContae27.html
@@ -6,35 +6,38 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-~~~~~~~~~~~...*..~~~~~~~~~~~~~~~~~
-~~~~~~~~......*..~~~~~~~~~~~~~~~~~
-~~~~..^MMMM^..*.....~~~~~~~~~~~~~~
-~~~...^^MMM^.**.....~~~~~~~~~~~~~~
-~~~...^^^^^^.*......~~~~~~~~~~~~~~
-~~~.....^^^..*......~~~~~~~~~~~~~~
-~~~.......^^.*......~~~~~~~~~~~~~~
-~~~~........**.......~~~~~~~~~~~~~
-~~~~~~~.....*.........~~~~~~~~~~~~
-~~~~~~.....****..........~~~~~~~~~
-~~~.......**..****.........~~~~~~~
-~......****......*****......~~~~~~
-....****.............***....~~~~~~
-..***..................**....~~~~~
-.....................^^^**....~~~~
-.....^^^^^..........^^^^^**.....~~
-~~...^^^^^^^^^^^^^^^^^^^^^*......~
-~~~...^^^^^^^^^^^^^^^^^^^^**......
-~~~~~~~~~~~rrrrr^^^^rr^^^^^*^.....
-~~~~~~~~~~~~.^^rrrrrr^^^^^^*^.....
-~~~~~~~~~~~~..^^^^^^^^^^^^^*^....~
-~~~~~~~~~~~~~~^^^^^^^^^^^^^*^....~
-~~~~~~~~~~~~~~.^^^^^^^^^^^**....~~
-~~~~~~~~~~~~~~~~..^^^^^...*.....~~
-~~~~~~~~~~~~~~~~..........**....~~
-~~~~~~~~~~~~~~~~................~~
-~~~~~~~~~~~~~~~~~..............~~~
-~~~~~~~~~~~~~~~~~~.............~~~
-~~~~~~~~~~~~~~~~~~~~~~~~~~...~~~~~
+xxxxxxxxxxxxxxx.....^^.^.*......xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxx...^^^.^^M....*.......xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxx....^^.M.^MMMM^..*.........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxx....^.M^.^^MMM^.**..........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxx.....^^..^^M^MM.*.^..........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxx...^^..^^MM^^^..*.^..........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxx....^^..^^...^^.***^^........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxx....^..^^^^...**.****........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxx.....^^..^..*....^******....xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxx....^^.....**..........******..xxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxx.............**................*....xxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxx...........****.....^^^.^^......***...xxxxxxxxxxxxxxxxxxxxxxx
+xxxxxx.........****..............^^......*...xxxxxxxxxxxxxxxxxxxxxxx
+xxxxxx.......***...................^.....***.xxxxxxxxxxxxxxxxxxxxxxx
+xxxxxx.......*..................^^^........*...xxxxxxxxxxxxxxxxxxxxx
+xxxxxx.......*..^^^^^......^...^.^^^.^.....***.xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxx........^^^..^^^.^^.^.^^^^^^^........*..xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxx........^^^^.^^^^^^.^^^^^^^^.^......**..xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxrrrrrr^^^^^^^.^^^^rr^^^^^.^......*..x.xxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxx..rrrr..^^rrrrrr^^^^M^^^......*..xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxx....rrrrrr^^^^^^^^^^^*^......*..xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxx.......^^^^^^^^M^^^^*^.....**..xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxx.......^^^^^^^^^^^**......*..xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxx.........^^^^^...*......**..xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxx.........^..^.....*.....*...xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxx......^^...^^^..........*...xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxx.............^^......***..xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxx.......^^...........*...xxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxx..................xxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx..........xxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.....xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
     </div>
 
       <body>
