--- a/contaePages/naContae28.html
+++ b/contaePages/naContae28.html
@@ -6,35 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-888888888888888~~~~~~~~~~~~~~~~~~~~~~~~~~~~~..~~~~~~~~~~~~~~~~~
-8888888888888888z.......~~~~~~~~~~~~~~~~~~.......~~~~~~~~~~~~~~
-8888888888z.....^^^^^^.....~~~~~~~~~~~.............~~~~~~~~~~~~
-888888z.........^^^^^^^^..r.~~~~~~~.................~~~~~~~~~~~
-88888z...^^^^^^********..rr.~~~~~~...................~~~~~~~~~~
-888z..^^^*******^^^...*rrr...~~~~.....................~~~~~~~~~
-8z..^^^***^MMMMMrrrrrrrrrrrrrrr.............**........~~~~~~~~~
-~...^^**^MMMMrrrrrrrrrrrrrrrrr...*........***.........~~~~~~~~~
-....********MMMMM^^^^*^.rrrrr....*.......**...........~~~~~~~~~
-...........***********^...rrrr...**.....**......**....~~~~~~~~~
-888888888z....^^.^^***^^..rrrrr...**....*....****.....~~~~~~~~~
-888888z.......^^..^^^******...rr...***..*...**.......~~~~~~~~~~
-8888z.....^^^^^.^^^^^^^^^.***..rrrr..*..*..**........~~~~~~~~~~
-888z......^^^^^.^^^^^^.^....***.....**..*.**........~~~~~~~~~~~
-88z....88z.......^^^^^^^^^....*******.****..........~~~~~~~~~~~
-888888888z........^^^^^^^...........***..............~~~~~~~~~~
-88888888z...........................*...................~~~~~~~
-8888888z....88......................****...................~~~~
-8888888z~...8888............8888.......*****...........**....~~
-8888z.888888888888..........88888..........*************......~
-8888z...~~8888888888888888888888..............***.............r
-8888z.^...8888888888888888z.............^^^^^^^^^*..........rrr
-8888z.^^..8888888888888z................^^^^^^^^^*........rrr~~
-88888z.^^.8888888888888z...8............^^^^^^^.**.......rr~~~~
-888888z...8888888888888888z...............^^^^^.*.rrrrrrrr~~~~~
-8888888888888888888888888z....8~~~~........^^.^**.r~~~~~~~~~~~~
-8888888888888888888888888888888~~~~~~~......^^**..~~~~~~~~~~~~~
-888888888888888888888888888888~~~~~~~~~~...^^*^..~~~~~~~~~~~~~~
-888888888888888888888888888888~~~~~~~~~~~~...*.~~~~~~~~~~~~~~~~
+888888888888888888zxxxxxxxxxx~~~~~~~~~~~~~~~~~......xxxxxxxxxxxxxxxx
+8888888888888888888z.......~~~~~~~~~~~~~~~~~~...........xxxxxxxxxxxxx
+8888888888888z.....^^^^^^.....~~~~~~~~~~~.................xxxxxxxxxxx
+888888888z.........^^^^^^^^..r.~~~~~~~.....................xxxxxxxxxx
+88888888z...^^^^^^********..rr.~~~~~~.......................xxxxxxxxx
+888888z..^^^*******^^^...*rrr...~~~~.........................xxxxxxxx
+8888z..^^^***^MMMMMrrrrrrrrrrrrrrr.............**............xxxxxxxx
+888~...^^**^MMMMrrrrrrrrrrrrrrrrr...*........***.............xxxxxxxx
+888....********MMMMM^^^^*^.rrrrr....*.......**...............xxxxxxxx
+888...........***********^...rrrr...**.....**......**........xxxxxxxx
+888888888888z....^^.^^***^^..rrrrr...**....*....****.........xxxxxxxx
+888888888z.......^^..^^^******...rr...***..*...**...........xxxxxxxxx
+8888888z.....^^^^^.^^^^^^^^^.***..rrrr..*..*..**............xxxxxxxxx
+888888z......^^^^^.^^^^^^.^....***.....**..*.**............xxxxxxxxxx
+88888z....88z.......^^^^^^^^^....*******.****..............xxxxxxxxxx
+888888888888z........^^^^^^^...........***..................xxxxxxxxx
+88888888888z...........................*.......................xxxxxx
+8888888888z....88......................****.......................xxx
+8888888888z~...8888............8888.......*****...........**........x
+8888888z.888888888888..........88888..........*************..........
+8888888z...~~8888888888888888888888..............***...............rr
+8888888z.^...8888888888888888z.............^^^^^^^^^*............rrrx
+8888888z.^^..8888888888888z................^^^^^^^^^*..........rrrxxx
+88888888z.^^.8888888888888z...8............^^^^^^^.**.........rrrxxxx
+888888888z...8888888888888888z...............^^^^^.*.....rrrrrrrrxxxx
+8888888888888888888888888888z....8xxxx........^^.^**.....rxxxxxxxxxxx
+8888888888888888888888888888888888xxxxxxx......^^**......xxxxxxxxxxxx
+888888888888888888888888888888888xxxxxxxxxx...^^*^......xxxxxxxxxxxxx
+888888888888888888888888888888888xxxxxxxxxxxx...*.....xxxxxxxxxxxxxxx
+888888888888888888888888888888888xxxxxxxxxxxx.......xxxxxxxxxxxxxxxxx
+888888888888888888888888888888888xxxxxxxxxxxx.......xxxxxxxxxxxxxxxxx
     </div>
 
       <body>
