--- a/contaePages/naContae29.html
+++ b/contaePages/naContae29.html
@@ -7,36 +7,36 @@
     </head>
     <div id="mapdata">
 
-~~~~~rr....~~~~~~~~~~~~~~~~~~
-~~~.rr...............~~~~~~~~
-~rrrr.............**.rr..~~~~
-.r.....**.......***.rr.....~~
-~.......*********..rr.*....~~
-~~...............rr...*....~~
-~~~.............rr....*....~~
-~~~.............r...***....~~
-~~~.........***rr****.....r..
-~~~.......***..r*.......rrr..
-~.......***....r*....rrrr...~
-~r.******......rr..rrr......~
-~r...........**.rrrr....^..~~
-~r..........*..........^^.~~~
-~r.........**.........^^.~~~~
-~r.........**......^^^..~~~~~
-~r........***....^^^.~~~~~~~~
-~r.....***..*...^^^.~~~~~~~~~
-~r..****...**...^^^~~~~~~~~~~
-~r.........*....^^.~~~~~~~~~~
-~r........**...^^^^.~~~~~~~~~
-~r.......**....^^^^..~~~~~~~~
-~r.......*......^^^^..~~~~~~~
-~rr.....**........^^^.~~~~~~~
-~~r.....*.............~~~~~~~
-~~~r..................~~~~~~~
-~~~rrrr..............~~~~~~~~
-~~~~~~rrr...........~~~~~~~~~
-~~~~~~~~rrrrr....~~~~~~~~~~~~
-~~~~~~~~~~~~rr.~~~~~~~~~~~~~~
+xxxxxxxxxxxxxxxxxxxxxxr........................rr..xxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxr........................rr...xxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxrrr.....................**.rr...xxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxr............**.......***.rr........xxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxx..............*********..rr.*......xxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxx......................rr...*.......xxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxx.....................rr....*.......xxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxx.....................r...***...rrrrrxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxx.................***rr****.....r.....xxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxx..............***..r*.......rrr.....xxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxx.............***....r*....rrrr......xxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxr.......******......rr..rrr.........xxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxr.................**.rrrr....^.....xxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxr................*..........^^.^^^xxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxr...............**.........^^.^^.xxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxr...............**......^^^.....xxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxr..............***....^^^....xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxr...........***..*...^^^....xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxx........****...**...^^^...xxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxr...............*....^^....xxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxr..............**...^^^^....xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxr.............**....^^^^.....xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxr.............*......^^^^.....xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxrr...........**........^^^....xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxr..........*................xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxr..........................xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxrrr......................xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxrrr...................xxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxrrrr.............xxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxrr..........xxxxxxxxxxxxxxxxxxxxxxxxxx
 
 
     
