--- a/contaePages/naContae3.html
+++ b/contaePages/naContae3.html
@@ -6,39 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-
-
-~~~~~~~~~~~~~~~~~~~~~~~MMMMM....~~
-~~~~~~~~~~~~~~~~~~~~~~MMMMM^^.**..
-~~~~~~~~~~~~...~~~~~~^MMM^^^.**...
-~~~~~~~~~~~.^^...~~.MM^^^...**....
-~~~~~~~~~~~^^^^^^..^M^^....*.....~
-~~~~~~~~~~~^.^.^^^^^^^.....*....~~
-~~~~~~~~~~^^^^....^........*....~~
-~~~~~~~~^^^^^..............*.....~
-~~~~~~~^^^^^..............**....~~
-~~~~~~~^^.^..............**.....~~
-~~~~~~~^^^^...........***......~~~
-~~~~~~~^^^...........**.......~~~~
-~~~~~~^^^............*........~~~~
-~~~~~~.^.............*.......~~~~~
-~~~rrr^***............***...~~~~~~
-~~~r..^..**............**..~~~~~~~
-~~rr.......***........**..~~~~~~~~
-~rr..........**.......*..~~~~~~~~~
-~r.............****..*..~~~~~~~~~~
-rr................****..~~~~~~~~~~
-rr......................~~~~~~~~~~
-rr.........................~~~~~~~
-r............................~~~~~
-rr.............................~~~
-~rrr...........................~~~
-~~~rr..........................~~~
-~~~~r.........................~~~~
-~~~rr..~~~...................~~~~~
-~rrr..~~~~~~~.............~~~~~~~~
-~r...~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
+xxxxxrrxxxxxxxxxxxxxxxxxxxxxxxxxxxx.....xxxxxxxxxxxxx8888888888888888
+xxxxxxrrxxxxxxxxxxxxxxxxxxxxxxxx..........MMMxxx^r*.xx888888888888888
+xxxxxxxrrxxxxxxxxxxxxxxxxxxxxx.....~~~~~~^MMM^^^.r*...889888888888888
+xxxxxxxxrxxxxxxxxxxxxxxxxxxxx...^^...~~.MM^^^...*r....888888888888888
+xxxxxxxxrxxxxxxxxxxx.xxxxxx....^^^^^^..^M^^..rr*rr..88888888888888888
+xxxxxxxrrxxxxxxxxxx....xxx.....^.^.^^^^^^^...r.*...888988888888888888
+xxxxxrrrxxxxxxxxx..........^..^^^^....^.....rr.*...888888988888888888
+xxxxxrxxxxxxxxxxx...^.....^.^^^^^..........rr..*...898888888888888888
+xxxxxrxxxxxxxxx......^...^.^^^^^..^.......rr..**..8888888888888888888
+xxxxxrrxxxxxx.......^......^^.^..........rr..**..88888888888888888888
+xxxxxxrxxxxxx.....^.....^^.^^^^.^........r***....78888988898888888888
+xxxxxxrxxxxx.........^..^^.^^^...........rrr....788788888888888888888
+xxxxxxxrxxxx.....^^...^^..^^^..^.........*.rr...888888788888888888888
+xxxxxxxrxxx.........^^.....^...^.........*.rrr..878898888988888888888
+xxxxxxxxrr.............rrr^***.^..........***r..788888888888888888888
+xxxxxxxxxrr............r..^..**............**r..788887888888888888888
+xxxxxxxxxxr....................***........**rr....8889888888888888888
+xxxxxxxxxxr......................**.......*rr......888888888888888888
+xxxxxxxxxr.........................****..*.rr......888789888888888888
+xxxxxxxxrr............................****.rrr.888..88888888888888888
+xxxxxxxxrr...................................r88789888888888888888888
+xxxxxxxxxrr....................................8888879888888888888888
+xxxxxxxxxxrr.....................................88888888888888888888
+xxxxxxxxxxxrr......................................888888988888888888
+xxxxxxxxxxxx88.....................................898888888888888888
+xxxxxxxxxx888888..............88...................888888888888888888
+xxxxxxxx888xx88888.........8.888................888888888888888888888
+xxx88xxxxxxxxxxx8888.......888................88798888888898888888888
+xx8xx88xxxxxxxxxxx888.....8898888...........8888888888888889888888888
+xxxxx8888xxxxxxxx8888....88888988788888888888988888988889888888888888
+888888888888888888889888888888888888889899888888888888888888888888888
     
     </div>
 
