--- a/contaePages/naContae30.html
+++ b/contaePages/naContae30.html
@@ -6,35 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~MM~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-888888888888888888888888z~MMMMMMMM~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-88888888888898888888888z.MMMMMMMMMMM~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-88888888888888888888888z...MMMMMMMMM.~~~~~~~~~~~~~~~~~~~~~~~~~~~
-8888888808888888880888z....^^^MMMMMMM..~~~~~~~~~~~~~~~~~~~~~~~~~
-888888888888888888888z....^^^***MMMM...~~~~~~~~.....~~~~~~~~~~~~
-88888888888888888888z..^^^^^**^****MM.........*****..~~~~~~~~~~~
-8888888888888988888z...^^^^^*^^^^^*************^^^^...~~~~~~~~~~
-888888888888888888z....^^^^^*^^^^^^^^^*.....^^^^^^^^...~~~~~~~.r
-888888888888888888z.....^^^^***^^^^^^^**....^^^^^^^^^...~~~~...r
-8888888088888888888z...~~~~...**^^^^^..**...^^^^^^^^^..........r
-888888888888888888888888888z...*..^^^...*.^^^^^^^^^............r
-888888888888888888880888788z...*.^^^^...**....^^^^^^^^........r~
-8888888888888888888888888z...***^^^^^....****...............rrr~
-8888888888888898888888z...***..^^^^^.........***...........rr~~~
-888888888888888888888z..***^^....^^......*****............rr~~~~
-88888888888888888888z.***.^^....^^^^^.****....^^^^^.......r.~~~~
-8888888988888888888z..*^^^.^^^^^^^..***.....^^^^^^^^^^...rr~~~~~
-88888888888888z.....**^^^^^^^^^^.****......^^^^^^^^^^...rr~~~~~~
-8888888888888z....***^^^^^^^^^^***........^^^^^^^^^^^^.rr~~~~~~~
-888888888888z....**^^^^^^^^^^.**.....rr....^^^^^^^^...rr~~~~~~~~
-88888878888z...***^^^^^^^^^.***.....rrrrr...^^^^^^^.rr~~~~~~~~~~
-88888888z.......^***...^^^***.....rr~~~~rrr.^^^^^^rrr~~~~~~~~~~~
-88888z.............********....rrrr~~~~~~~rrrrrrrr~~~~~~~~~~~~~~
-8888z.............~~.........rrr~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-88z..........~~~~~~~~~.....~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-8z.........~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-8z.......~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    
+88887xxx8888888888888888888888888zMMMxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+887xxxxx888888888888888888z.^^88MMM^MMMMxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+87xxxxx888888888889888888z.^^^.MMMMMMMMMMMxxxxxxxxxxxxxxxxxxxxxxxxxxx
+87xxxx887xxxxx8888888888z.^^^^...MM^MM^MMM.xxxxxxxxxxxxxxxxxxxxxxxxxx
+8888888887xxxx088888888z.^.^^....^^^MMM^MMM..xxxxxxxx.........xxxxxxx
+88888888887xxxx88888888z.^^^.....^^***MMMM.....xxxxx...........xxxxxx
+8888888888888888878888z.^.^..^...^**^****MM.........*****........xxxx
+888888888888888888898z.^^....^..^^*^.^^^*************^^^^.........xxx
+88888888888887888888z.^^^....^^^^.*^^..^^..^*.....^^^^^^^..........x.
+8888888888888888888z.^^.^.....^.^^***^^.^^.^**....^.^^.^^^...........
+888888888888808888z.................**^^.^^..**...^^^^^.^^^..........
+88888888888888888z...8888z^^.^^.^^...*..^^^...*.^^^^^^^^.............
+888888888889888888888888z....^.^^^...*.^^.^...**....^^^.^^.^........r
+88888888888888888887888z.^^.^^^^...***^^^^^....****...............rrr
+88888888889888888888988z.^^^^...***..^^^^^.........***...........rr~x
+8888888888888888887888z.^^^^..***^^....^^......*****............rr~~x
+888888888888988888888z.^^^^.***.^^....^^^^^.****....^.^^^.......r.~xx
+888888888888898888z...^^^^..*^^^.^^^^^^^..***.....^.^^^^^.^^...rr~xxx
+88888887888888888z........**.^^^^^^.^^.****......^.^^^^^^^^...rr~~xxx
+8888888888888888z.......***^^^^^^^^^^***........^^^^^^^^^^.^.rr~~~~xx
+8888888878888888z......**^^.^^^.^^^.**.....rr....^^^^^.^^...rr~~~xxxx
+888888888888888z.....***^^^^^^^^^.***.....rrr.....^..^^^^.rr~~~xxxxxx
+88888878888z..^.......^***...^^^***.....rr8888rrr.^^.^^^rrr88xxxxxxxx
+8888888888z......^.......********....rrrr8888888rrrrrrrr888xxxxxxxxxx
+88888888z....^......^...88....^....rrr8888888888888888888xxxxxxxxxxxx
+888888z............888888888.....88888888888xxx8888xxxxxxxxxxxxxxxxxx
+888z^......^.....8888788888888888888888888xxxxxxxxxxxxxxxxxxxxxxxxxxx
+88z...^.....^..8888888888xx88888xxxx8888xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+8z.^.....888878888888888xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+8888888888888888xxxx88xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+888888887888888xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
     </div>
 
       <body>
