--- a/contaePages/naContae31.html
+++ b/contaePages/naContae31.html
@@ -6,37 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-xxxxxttttttxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxt....ttxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xt......^^.tttxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-t.^^^^^^^^...tttxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-t.^^^^^^^^^^...ttttxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-t.^^^^^^^^.^^.....tttttttttttxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-t...^^^^^^^^^.**^......r....tttttttxxxxxxxxxxxxxxxxxxxxxxxxxx
-ttt..^^^^^^^^.*.^^.....rr.*.......tttxxxxxxxxxxxxxxxxxxxxxxxx
-xxttttt^^^^^^.***.......rr.***......ttxxtttttttttttxxxxxxxxxx
-xxxxxxtttt..^^..******...rrrr*rr.....tttt.........ttttttxxxxx
-xxxxxxxxxttt.^.......******..*.rrr.....................ttxxxx
-xxxxxxxxxxxt.............r******..rrr...rrrrrrrrrrrrrr..ttxxx
-xxxxxxxxxxxtt...........rr.....***..rrrrr................tttx
-xxxxxxxxxxxxtt..........r........****......................tt
-xxxxxxxxxxxxxt..........rr..........*.......................t
-xxxxxxxxxxxxxttt.........rrr........****....................t
-xxxxxxxxxxxxxxxtt..........r...........***...................
-xxxxxxxxxxxxxxxxtt.........r.............**..................
-xxxxxxxxxxxxxxxxxtt.......rr..............**.................
-xxxxxxxxxxxxxxxxxxttt......................**................
-xxxxxxxxxxxxxxxxxxxxtt......................**...............
-xxxxxxxxxxxxxxxxxxxxxtt......................*...............
-xxxxxxxxxxxxxxxxxxxxxxtt.....................**..............
-xxxxxxxxxxxxxxxxxxxxxxxttt....................**.............
-xxxxxxxxxxxxxxxxxxxxxxxxxttt...................*............t
-xxxxxxxxxxxxxxxxxxxxxxxxxxxttt.................**..........tx
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxtt....~......................txx
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxttttttt..................ttttxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxt.........ttttttttttxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxtttttttttttxxxxxxxxxxxxxx
-
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxx.^....xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xx...^..^^.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+x.^^^^^^^^...xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+x.^^.^^^^^^^...xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+x.^^^^^^^^.^^.....xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+x...^.^^^^^^^.**^....xxr.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxx..^^.^^^^^.*.^^.....rr.*...xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxx^^.^^^.***.......rr.***...xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxx..^^..******...rrrr*rr.....xxxxxxxxx....xxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxx^x......******..*.rrr.....................xxxxxxxxxxxxxx
+xxxxxxxxxxxx.xx..........r******..rrr...rrrrrrrrrrrrrrrrxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxx......rr.....***..rrrrr................xxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxx....r........****........................xxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxx..rr..........*..........................xxxxxx
+xxxxxxxxxxxxxxxxxxxxxx...rrr........****........................xxxxx
+xxxxxxxxxxxxxxxxxxxx.......r...........***........................xxx
+xxxxxxxxxxxxxxxxxxx........r.............**........................xx
+xxxxxxxxxxxxxxxxxxx.......rr..............**.......................xx
+xxxxxxxxxxxxxxxxxxxxx......................**....................xxxx
+xxxxxxxxxxxxxxxxxxxxxx......................**..................xxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxx....................*................xxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxx..................**.............xxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxx..................**............xxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxx..................*..............xxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx................**..............xxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx..............**..............xxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx..............***.............xxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx..........xx..*..........xxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx..xxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 
     
