--- a/contaePages/naContae4.html
+++ b/contaePages/naContae4.html
@@ -6,35 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-~~~~~~~~~~~~~~~~~~~~~~~~rrrrrr.**.....~~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~~~rrrrrr^^^****..........~~~~~~~~
-~~~~~~~~~~~~~~~~~rrr^^^^^^^**.*...............~~~~
-~~~~~~~~~~~~~~~rrr.^^^^^****..*...............~~~~
-~~~~~~~~~~~~~rrr.^^^^****.....*...............~~~~
-~~...rrrrrrrrr..^^^^^*.*......***............~~~~~
-~...^^^^^^^^^^^^^^****.*........**.........~~~~~~~
-~...^^^^^^^^^^^.***....*.........*..........~~~~~~
-~.....^^^^*******^...***.........*..........~~~~~~
-~......^^**.^^^....***...........***........~~~~~~
-~~~...^^^^^^^^^^...*...............*^^^^^..~~~~~~~
-~~~...............**..............^*^^^^~~~~~~~~~~
-~~................*..............^^*^~~~~~~~~~~~~~
-~...............**..............^^^**~~~~~~~~~~~~~
-~..............*................^.^^^~~~~~~~~~~~~~
-~..............*................^^^^^~~~~~~~~~~~~~
-~.............**.................^^^^^^^~~~~~~~~~~
-~............**.................^^^^^^^^^^~~~~~~~~
-.............*.^^^.............^^^^^^^^^^^^^^~~~~~
-.............*^^^^^^...........^^^^^^^^^^MM^^^^~~~
-.............*^^^^^.............^^^^^^^^^MMMM^^^~~
-~.........^^^^^^^^~~~............^^^^^^^^MMMMMMMM~
-~~~~~~....^^^^^^^~~~~~~...............^^^^MMMMMMMM
-~~~~~~~....^^^~~~~~~~~~~..................MMMMMMM~
-~~~~~~~.......~~~~~~~~~~............~~~....MMMMMM~
-~~~~~~~~....~~~~~~~~~~~~~~........~~~~~~~....M.~~~
-~~~~~~~~~~~~~~~~~~~~~~~~~~~......~~~~~~~~~~~~~~~~~
-
-
+xxxxxxxxxxxxxxxxxxxx888888xxxxxxxxxxxxxxxxxxxxxxxxxxxx..xxxxxxxxxxxxxx        
+xxxxxxxxxxxxxxxxxxx888888xxxxxxxxxxxxxxxxxxxxxxxxxxxx...xxxxxxxxxxxxxx        
+xxxxxxxxxxxxxxxxxx888888xxxx888888888888.**.....xxxx.........xxxxxxxxx
+xxxxxxxxxxxxxxxx8888888xxx8888888888^^^****.....................xx..xx
+xxxxxxxxxxxxxxxx888888888888888^^^^^^^**.*..........................xx
+xxxxxxxxxx8888888888888888888.^^^^^****..*........................xxxx
+888888xxx888888888888888888.^^^^****.....*.......................xxxxx
+8888xxxx88888888888888888..^^^^^*.*......***.....................xxxxx
+8888xxx8888888.^^^^^^^^^^^^^^****.*........**....................xxxxx
+888888888888...^^^^^^^^^^^.***....*.........*..................xxxxxxx
+888888888........^^^^*******^...***.........*.................xxxxxxxx
+xxxx..............^^**.^^^....***...........***................xxxxxxx
+xxxx.............^^^^^^^^^^...*...............*^^^^^....xxxxxxxxxxxxxx
+xxxxx........................**..............^*^^^^xxx....xxxxxxxxxxxx
+xxxxx........................*..............^^*^..xxxxxxxxxxxxxxxxxxxx
+xxxxx......................**..............^^^**...xxxxxxxxxxxxxxxxxxx
+xxxx......................*................^.^^^...xxxxxxxxxxxxxxxxxxx
+xxx.......................*................^^^^^........xxxxxxxxxxxxxx
+xxxx.....................**.................^^^^^^^......xxxxxxxxxxxxx
+xxxxx...................**.................^^^^^^^^^^.........xxxxxxxx
+xxxxxx..................*.^^^.............^^^^^^^^^^^^^^.......xxxxxxx
+xxxx....................*^^^^^^...........^^^^^^^^^^MM^^^^........xxxx
+xxxx....................*^^^^^.............^^^^^^^^^MMMM^^^......xxxxx
+xx...................^^^^^^^^xxx............^^^^^^^^MMMMMMMM.......xxx
+xx...................^^^^xxxxxxxxx...............^^^^MMMMMMMM.......xx
+xx....................^xxxxxxxxxxxxx.................MMMMMxM........xx
+xx....................xxxxxxxxxxxxxxx..........x......MMMxxxx.......xx
+xxx..xxxxxxx..xxxxx.xxxxxxxxxxxxxxxxxx.......xxxxx......xxxxxx..xx..xx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
     
     </div>
