--- a/contaePages/naContae5.html
+++ b/contaePages/naContae5.html
@@ -6,36 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-~~~~~~~~~~~.....~~~~~~~~~
-~~~~~~~~~~~.........~~~~~
-~~~~~~~~~~......*...~~~~~
-~~~~~~~~~..^^...*....~~~~
-~~~~..^^^^^^^...*....~~~~
-......^^^^^^^...*....~~~~
-......^^^^^^^...**.....~~
-...........^^^...***....~
-...................*.....
-~..................*.....
-~~~...............**.....
-~~~~~...........***......
-~~~~~~~.........*........
-~~~~~~~~........*........
-~~~~~~~~~~......**..rrrrr
-~~~~~~~.........rrrrr...~
-~~~~~.........rrr*......~
-~~~rr........rr..*.....~~
-~...rrrr..rrrr...*....~~~
-~......rrrr.........~~~~~
-~.................~~~~~~~
-~~...............~~~~~~~~
-~~...............~~~~~~~~
-~~...............~~~~~~~~
-~~..^^^^..........~~~~~~~
-~~~.^^^^^^^^.......~~~~~~
-~~~.^^^^^^^^^.......~~~~~
-~~~..^^^^^^^^^^......~~~~
-~~~~.^^^^^^^^^^^^......~~
-~~~~~~~~.^^^^^^^^^^.....~
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx88888888888888
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx..............888888888888888888888
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxx....................8888888888888888888
+xxxxxxxxx.....xxxxxxxxxxxx....................*....88888878898888888
+xxxxxxx.........xxxxxxxx..................^...*.88888888888888888888
+xxxxxxx.............................^.^^.^^...*8888.8888788888888888
+xxxxxxxx............................^^..^^^...*......888888788888888
+xxxxxxxxx...........................^^^^^^^...**.....888898888888888
+xxxxxxxxxxx..............................^^^...*888.8887888888888888
+xxxxxxxxxxxxxxxxxxx..............................8888888888878888888
+xxxxxxxxxxxxxxxxxxxxx............................*..8888878888888888
+xxxxxxxxxxxxxxxxxxxxx...........................**...888888888988888
+xxxxxxxxxxxxxxxxxxxxx.........................***.....88988888888888
+xxxxxxxxxxxxxxxxxxxx..........................*....88888887888888888
+xxxxxxxxxxxxxxxxxxx...........................*.....8888888888888888
+xxxxxxxxxxxxx...............................8888.....888888887888888
+xxxxxxxxxxxx..............................888*888.......878888888888
+xxxxxxxxxx........rrrrr....rrrrrr........888*8888......8888888888888
+xxxxxxxx......rrrrr...rrrrr......rr.....888*888888.....8888888888888
+xxxxxx..rrrrrrr......^...^........rrrrrr8888887888888887888788888888
+xxrrrrrrr..........^^.^............^.....888788888898888888888888888
+rrrxxxx..............^..^................888888788888888888888888888
+xxxxx...........^...^.....^M.^....^........8888888888887888888888888
+xxxx...........^...^.....^..^..^...^.^........8888888888888888888888
+xxxx..........^..^^.....^.M^..^^.^...^............888788888898888888
+xxxxx........^..............^.M...M^^^..^........8888888888888888888
+xxxxx.....................^..^..^M^^^^M^^^.......8889888888888888888
+xxx....................^...^..^...^^^^^^^^^.......888888898888888888
+xxxx....xxxxxxx..........xx.......xxxx^^^^^^xx.....88888888888888888
+xxxxxxxxxxxxxxxx.......xxxxxx...xxxxxxx^^^^^xxxxx....888888888888888
+xxxxxxxxxxxxxxxxx....xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx88988888888888
 
 
     
