--- a/contaePages/naContae6.html
+++ b/contaePages/naContae6.html
@@ -6,40 +6,38 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-~~~~~~~~~~~~~~~~~~~^^^~~~~~~~~~~~
-~~~~~~~~~~~~~~~~~.^^^^.~~~~~~~~~~
-~~~~~~~~~~~~~~~..^^^^^.~~~~~~~~~~
-~~~~~~~~~~~~~~...^^^^^..~~~~~~~~~
-~~~~~~~~~~~~~..^^^^^^^^.~~~~~~~~~
-~~~~~~~~~~~~...^.^^^^^^..~~~~~~~~
-~~~~~~~~~~~....^^^........~~~~~~~
-~~~~~~~~~~.................~~~~~~
-~~~~~~~~~....................~~~~
-~~~~~~~~.......................~~
-~~~~~~~..........................
-~~~~~~......................***..
-~~~~~............************...~
-~~~...**.........*.............~~
-~~.....**.......**............~~~
-~.......***...***............~~~~
-..........*****.*...........~~~~~
-r.....******.....*.........~~~~~~
-r....**..**......**.......~~~~~~~
-r....*..**........*......~~~~~~~~
-rr.**...*........**.....~~~~~~~~~
-~r.....**.......rr....~~~~~~~~~~~
-~rr....*.....rrrrrrrr~~~~~~~~~~~~
-~rr..**..rrrrr***...~~~~~~~~~~~~~
-~~r..rrrrrrr***....~~~~~~~~~~~~~~
-~~r.rrrrr~~.*...~~~~~~~~~~~~~~~~~
-~~rrrrr~....~~~~~~~~~~~~~~~~~~~~~
-~~rr~....~~~~~~~~~~~~~~~~~~~~~~~~
-~~rr..~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-
-
-    
-    </div>
+xxxxxxxxxxxxxxx.................xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxx..........^...^..~~~~~~~~~xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxx......^^........~~~~xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxx......^...^^.........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxx.................^....xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxx...............^..........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxx~~~~~~..........^....^^..........~~xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxx~~~~.............................~~~~~~~xxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxx.................................xxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxx.................................xxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxx.............................xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxx..............~~~~~~.......xxxxxxxxxxxxxxxxxxxxxxxxxxxrrr
+xxxxxxxxxxxxxxxx........~~~~~~........xxxxxxxxxxxxxxxxxxxxxxxrrrrrrr
+xxxxxxxxxxxxxxxxx..xxxxxx~~~~..........xxxxxx.....xxxxxxxrrrrrrrrxxx
+xxxxxxxxxxxxxxxxxxxxxxxxx~~~............xxx.......rrrrrrrrrrrxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxrrr~.................rrrrrrrrrrrrrxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxrr...............rrrrrrrrrrr.....xxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxr........rrrrrrrrrrrrr...........xxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxrr..rrrrrrrrrrrrrr................xxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxrrr.rrrrrrrr..........................xxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxrrrrrr................................xxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxrrr.....................................xxxxxxxxx
+xxxxxxxxxxxxxxxxxxx........................................xxxxxxxxx
+xxxxxxxxxxxxxxxxxr.....rr....................................xxxxxxx
+xxxxxxxxxxxxxxxxxxr...rxxr..................................xxxxxxxx
+xxxxxxxxxxxxxxxxxxxrrrxxxxr...............................xxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxr............~~~.............xxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxrrr..........~~...........xxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxx~~xxxxxx~~~~~...................xxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxx~~~xxx~~~xx................xxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxx~~~xxxxxxxxxxxxxx..xxxxxxxxxxxxxxxxxxxxxxxxx
+</div>
 
       <body>
 
