--- a/contaePages/naContae7.html
+++ b/contaePages/naContae7.html
@@ -7,36 +7,36 @@
     </head>
     <div id="mapdata">
 
-~~~~~~~~.....~~~~~~~~~~~~~~~~~
-~....~~~~~~..~~~~~~~~~~~~~~~~~
-~........~~~~~~~...MM~~~~~~~~~
-~..*****........^^MMM.~~~~~~~~
-r..*...***....****MM^.~~~~~~~~
-r..*.....*****^^M*MM^.~~~~~~~~
-r***...........^**M^..~~~~~~~~
-r..*^^^^^^^...MM*^^^.~~~~~~~~~
-r..**^^^^^^^^M**^^^...~~~~~~~~
-rr..**^^^^^^^**^^^^^^.MM.~~~~~
-~r..^**^^^^^**...******M.~~~~~
-~rr..^^**^^*******.^^M**..~~~~
-~~~r..^^^***^^^....^MMM*....~~
-~~~r...^^^^*.....^^MMM^*......
-~~~r..^^^^^*^^^..^MMM..*......
-~~~r.....^^^*...^^^^..*.....~~
-~~~r........**.^^.^^.**^...~~~
-~~~r..rrrr...*********^^..~~~~
-~~~rrrr.~~rr.**^^^^^^.^..~~~~~
-~~~~r~~~~~~rr.**...**^...~~~~~
-~~~~~~~~~~~rr..******..~~~~~~~
-~~~~~~~~~~~~rr..^^^*...~~~~~~~
-~~~~~~~~~rrrr.^^^^^*...~~~~~~~
-~~~~~~~~rr...^^^^^**..~~~~~~~~
-~~~~~~~~rr.^^^^^..*..~~~~~~~~~
-~~~~~~~~r..^^^^..**.~~~~~~~~~~
-~~~~~~~~r.....***...~~~~~~~~~~
-~~~~~~~...*****...~~~~~~~~~~~~
-~~~~~~~........~~~~~~~~~~~~~~~
-~~~~~~~..~~~~~~~~~~~~~~~~~~~~~`
+xxx88888888888888888888.....8888888888888888888888888888888888888888
+r..............88888888888..8888888888888888888888888888888888888888
+r..................~~888888888M8888888888888888888888888888888888888
+r............*****........^^MM88888888888888888888888888888888888888
+r............*...***....****MM^.888888888888888888888888888888888888
+r............*.....*****^^M*MM^.888888888888888888888888888888888888
+rr.........***...........^**M^..88888888888888888888888888888888888z
+xr...........*^.^^^^^...MM*^^^.888889888888888898888888888888888888z
+xr.......^...**^^^.^^^^M**^^^...888888888988888888888888888888888888
+xrr...........**^^^^^^^**^^^^^^.MM.888888888888888888888888888888888
+xxr.......^...^**^.^^^**M..******M.88...8888888898888888888888888888
+xxr.....^......^^**^.*******.^^M**..88...888988888888888888888888888
+xxr.............^^^***^^^.M..^MMM*...r88.888888888888888888888888888
+xxr........^.....^^^^*.....^^MMM^*.......888888889888888888888888888
+xxr.............^^^^^*^^^..^MMM..*......8888888988888888888888888888
+xr.................^^^*...^^^^..*.....88888888888888x888888888888888
+xxr.........^.........**.^^.^^.**^...8888xxxxxxx88888888898888888888
+xx~~............^......*********^^..888xxxxxxxxxxxxxx888888888888888
+xx~~~..................**^^^^^^.^...8xxxxxxxxxxxxxxxxx88888888888888
+xxxrr.............^.....**...**^....xxxxxx888xxxxxxxxxx8888888888888
+xxr......................******.....xxxxxx88888xxxxxxxxx888888888888
+xx.~~.......~~~...........^^^*......xxxxxxx8888888xxxxxxx88898888888
+xxx~~~....~~~~~~........^^^^^*......xxxxxxxxx888888xxxxxx88888888888
+xxxx~~~~~~~~~~~........^^^^^**......xxxxxxxxxxx88888xxxx888888888888
+xxxxx~~~~~~~~~.......^^^^^..*......xxxxxxxxxxxx8888888xxx88888888888
+xxxxxx~~~~~~~~~~.....^^^^..**.....xxxxxxxxxxxxx88888888xxx8888888888
+xxxxx~~~~~~~~~~~........***......xxxxxxxxxxxxxx88888888xxxx889888888
+xxxx~~~~~~~~~~~.....*****......xxxxxxxxxxxxxx888888888888xx888888888
+xx~~~~~~~~~~~................xxxxxxxxxxxxxxxxx8xxxxxx888888888888888
+x~~~~~~~~~~~~..............xxxxxxxxxxxxxxxxxxxxxxxxxxx88888889888888
     
     </div>
 
