--- a/contaePages/naContae8.html
+++ b/contaePages/naContae8.html
@@ -6,37 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-888888888888088888888888888888878888z........txxxxxxxxxxx
-88888888888880888888z....8z...888988z...........tttxxxxxx
-88808888988888888888z..........88888z...^^^^^^....ttttttx
-889888888888z....888z...^^.....8888....^^MMMM^^^.......tt
-887888z.............*********..888....MMMMMMMMM^^^......t
-88888z..........^^***MMMMMMM**.88.....^MMMMMMMMMM^......t
-8888z......^^.^^***MMMMMMMMM.*.8......MMMMMMMMMM^^......t
-8888z....^^^^^***MMMMMMMMMMM.*.......MMMMMMMMM^^^......tt
-8888z....^^^.**MMMMMMMMMMMMM.******..^MMMMMM^^^.......ttx
-z..8.......***MMMMMMMMMMMMM.......*..^^^^^^^^.......tttxx
-z..8....^***MMMM^^^^^^MMMM........****..........tttttxxxx
-z.888..^**MMMMMM^MMMM^MMM....rrrrrrrr*.......ttttxxxxxxxx
-0888z...*MMMMMMM^MM^^^MM...rrr...^^.r*......ttxxxxxxxxxxx
-8898z..**MMMMMM^^MMMMMM..rrr.^^^^^^.rrrrrrrttxxxxxxxxxxxx
-88888z.*MMMMMMM^MMMM.rrrrr^^^^.^^^.***....ttxxxxxxxxxxxxx
-8788z..*^^^M^^^^.rrrrr..^^^MMM^^..**......txxxxxxxxxxxxxx
-.......*..^^^....^^^^^^^MMMM^^^****.....tttxxxxxxxxxxxxxx
-..^^^^^*...^^^^^^^..^^..^^^^^.**...ttttttxxxxxxxxxxxxxxxx
-...^^^^*MM^M.********^^^^..****..tttxxxxxxxxxxxxxxxxxxxxx
-88z....*******..888.***...**.....txxxxxxxxxxxxxxxxxxxxxxx
-88888z....888888888z..*****......ttxxxxxxxxxxxxxxxxxxxxxx
-888888888888888888z...............txxxxxxxxxxxxxxxxxxxxxx
-8889888888078888z.................txxxxxxxxxxxxxxxxxxxxxx
-88888888888888z..................ttxxxxxxxxxxxxxxxxxxxxxx
-8888888889888z................ttttxxxxxxxxxxxxxxxxxxxxxxx
-8888888888888z............tttttxxxxxxxxxxxxxxxxxxxxxxxxxx
-8888888888888ztttttttttttttxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-
-
-
-    
+88888888888888888888888088888888888888888878888z........txxxxxxxxxxx
+8888888888888888888888880888888z....8z...888988z...........tttxxxxxx
+8888888888888808888988888888888z..........88888z...^^^^^^....ttttttx
+88888888888889888888888z....888z...^^.....8888....^^MMMM^^^.......tt
+88888888888887888z.............*********..888....MMMMMMMMM^^^......t
+8888888888888888z..........^^***MMMMMMM**.88.....^MMMMMMMMMM^......t
+888888888888888z......^^.^^***MMMMMMMMM.*.8......MMMMMMMMMM^^......t
+888888888888888z....^^^^^***MMMMMMMMMMM.*.......MMMMMMMMM^^^......tt
+888888888888888z....^^^.**MMMMMMMMMMMMM.******..^MMMMMM^^^.......ttx
+88888888888z..8.......***MMMMMMMMMMMMM.......*..^^^^^^^^.......tttxx
+88888888888z..8....^***MMMM^^^^^^MMMM........****..........tttttxxxx
+88888888888z.888..^**MMMMMM^MMMM^MMM....rrrrrrrr*.......ttttxxxxxxxx
+888888888880888z...*MMMMMMM^MM^^^MM...rrr...^^.r*......ttxxxxxxxxxxx
+888888888888898z..**MMMMMM^^MMMMMM..rrr.^^^^^^.rrrrrrrttxxxxxxxxxxxx
+8888888888888888z.*MMMMMMM^MMMM.rrrrr^^^^.^^^.***....ttxxxxxxxxxxxxx
+888888888888788z..*^^^M^^^^.rrrrr..^^^MMM^^..**......txxxxxxxxxxxxxx
+88888888888.......*..^^^....^^^^^^^MMMM^^^****.....tttxxxxxxxxxxxxxx
+88888888888..^^^^^*...^^^^^^^..^^..^^^^^.**...ttttttxxxxxxxxxxxxxxxx
+88888888888...^^^^*MM^M.********^^^^..****..tttxxxxxxxxxxxxxxxxxxxxx
+8888888888888z....*******..888.***...**.....txxxxxxxxxxxxxxxxxxxxxxx
+8888888888888888z....888888888z..*****......ttxxxxxxxxxxxxxxxxxxxxxx
+88888888888888888888888888888z...............txxxxxxxxxxxxxxxxxxxxxx
+888888888888889888888078888z.................txxxxxxxxxxxxxxxxxxxxxx
+8888888888888888888888888z..................ttxxxxxxxxxxxxxxxxxxxxxx
+888888888888888888889888z................ttttxxxxxxxxxxxxxxxxxxxxxxx
+888888888888888888888888z............tttttxxxxxxxxxxxxxxxxxxxxxxxxxx
+888888888888888888888888ztttttttttttttxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+88888888888888888888888888888888888888888888888888888888888888888888
+88888888888888888888888888888888888888888888888888888888888888888888
+88888888888888888888888888888888888888888888888888888888888888888888
+88888888888888888888888888888888888888888888888888888888888888888888
     </div>
 
       <body>
